fix: 修复Docker构建时字体路径问题
- 修复WYSIWYGEditorWithToolbar.css中字体文件路径引用
- 将绝对路径/font/改为相对路径../../../public/font/
- 解决Docker构建时crypto.hash is not a function错误
- 确保字体文件在构建环境中正确解析

--- a/frontend/src/components/editor/markdown/WYSIWYGEditorWithToolbar.css
+++ b/frontend/src/components/editor/markdown/WYSIWYGEditorWithToolbar.css
@@ -7,7 +7,7 @@
 /* 字体定义 */
 @font-face {
   font-family: 'WenYuanSerifSC';
-  src: url('/font/WenYuanSerifSC-Regular.ttf') format('truetype');
+  src: url('../../../public/font/WenYuanSerifSC-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: 'WenYuanSerifSC';
-  src: url('/font/WenYuanSerifSC-Bold.ttf') format('truetype');
+  src: url('../../../public/font/WenYuanSerifSC-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -23,7 +23,7 @@
 
 @font-face {
   font-family: 'WenYuanSansSCC';
-  src: url('/font/WenYuanSansSCC-Regular.ttf') format('truetype');
+  src: url('../../../public/font/WenYuanSansSCC-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
